--- a/TinyDreams/package.json
+++ b/TinyDreams/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.4.6",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "install": "^0.13.0",
     "npm": "^11.1.0",
     "react": "^18.3.1",
