--- a/TinyDreams/package.json
+++ b/TinyDreams/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^12.4.13",
     "install": "^0.13.0",
     "npm": "^11.1.0",
     "react": "^18.3.1",
