--- a/TinyDreams/package.json
+++ b/TinyDreams/package.json
@@ -25,7 +25,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.1.0"
+    "react-router-dom": "^6.1.0",
+    "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
